# seeker-os

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  compose.yaml  demo-dev.sh  dev.sh  docker-compose.yml  war-stories.md
ai-audit/: blog-promptfoo-model-eval.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/seeker_os/: config.py  config_writer.py  database.py  env_utils.py  events.py  main.py  models.py
backend/seeker_os/analysis/: auto_policy.py  jd_analyzer.py  metadata_extractor.py
backend/seeker_os/analysis/prompts/: jd_analysis_system.txt  jd_analysis_user_template.txt
backend/seeker_os/api/: analytics.py  app.py  backup.py  company_research.py  company_research_settings.py  demo_guard.py  events_routes.py  inbound.py  jd_analysis.py  jobs.py  jobs_repo.py  jobs_service.py  models.py  pipeline.py  profile_routes.py  queries.py  resumes.py  schemas.py  settings_routes.py
backend/seeker_os/api/prompts/: ai_rule_generator_system.txt  resume_parser_system.txt
backend/seeker_os/application_answers/: generator.py
backend/seeker_os/application_answers/prompts/: application_answer_critique_system.txt  application_answer_critique_user_template.txt  application_answer_generation_system.txt  application_answer_generation_user_template.txt
backend/seeker_os/cover_letter/: generator.py
backend/seeker_os/cover_letter/prompts/: cover_letter_generation_system.txt  cover_letter_generation_user_template.txt
backend/seeker_os/crossref/: jobsearch_repo.py
backend/seeker_os/dedup/: layers.py  normalize.py
backend/seeker_os/demo/: __init__.py  seed.py
backend/seeker_os/demo/fixtures/: atlas_ledger.json  beta_metrics.json  blackthorne_defense.json  cedarpoint_systems.json  delta_networks.json  fictive_data.json  gamma_cloud.json  global_dynamics_corp.json  harbor_health.json  northwind_robotics.json  polaris_solutions.json  prism_compute.json  remoteco.json  resume_prism_compute.json  resume_vanta_logistics.json  sentinel_clearance.json  vanta_logistics.json
backend/seeker_os/discovery/: ats_fetch.py  browser_fetch.py  cache.py  engine.py
backend/seeker_os/discovery/sources/: base.py  hiring_cafe.py  registry.py
backend/seeker_os/filtering/: hard_filters.py  title_patterns.py
backend/seeker_os/inbound/: __init__.py  gmail.py  links.py  matcher.py  models.py  oauth.py  poll.py  repository.py  service.py
backend/seeker_os/llm/: anthropic_oauth.py  anthropic_provider.py  base.py  cache.py  json_utils.py  models.py  openai_compat_provider.py  router.py
backend/seeker_os/observability/: __init__.py  budget_guard.py  langfuse_sink.py  llm_ledger.py
backend/seeker_os/pipeline/: runner.py
backend/seeker_os/research/: company_research.py  models.py
backend/seeker_os/research/prompts/: company_dossier_system.txt
backend/seeker_os/research/retrieval/: base.py  models.py  registry.py  tavily.py
backend/seeker_os/resume/: bullet_ranker.py  export.py  extract.py  generator.py  master_parser.py  role_recency.py  validator.py
backend/seeker_os/resume/prompts/: resume_generation_system.txt  resume_generation_user_template.txt
backend/seeker_os/scoring/: calibration.py  engine.py  net_score.py  research_adjustment.py
backend/seeker_os/validation/: __init__.py  ats_parse.py  traceability.py
backend/seeker_os/validation/prompts/: traceability_judge_system.txt  traceability_judge_user_template.txt
backend/tests/: conftest.py  test_api.py  test_application_answers.py  test_application_events.py  test_ats_parse.py  test_auto_analysis.py  test_backup.py  test_budget_guard.py  test_bullet_ranker.py  test_company_research.py  test_company_research_settings.py  test_competency_selection.py  test_config_reload_sink.py  test_config_warnings.py  test_cover_letter.py  test_dedup.py  test_demo_mode.py  test_domain_mismatch.py  test_email_config.py  test_filters.py  test_hiring_cafe.py  test_honest_qualifiers.py  test_html_jd_fixes.py  test_identity_channel_config.py  test_inbound.py  test_jd_analyzer.py  test_job_reorder.py  test_langfuse_canary_pii.py  test_langfuse_sink.py  test_llm.py  test_llm_observability.py  test_manual_events.py  test_manual_job.py  test_master_parser.py  test_migration_desync.py  test_models_api.py  test_net_score.py  test_never_claim_density.py  test_observability.py  test_page_count.py  (+22 more)
backend/tests/fixtures/: synthetic_master_resume.md
config/: accuracy_rules.example.yml  blacklist.example.txt  channel_rules.example.yml  company_research.example.yml  email.example.yml  filters.example.yml  filters.yml  identity_rules.example.yml  observability.example.yml  observability.yml  profile.example.yml  sources.yml  (+5 more)
(+254 files in other folders)
