[project]
name = "seeker-os"
version = "0.1.0"
description = "Structured, dashboard-driven job search pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",           # HTTP client (async-capable, but sync for Phase 1)
    "pydantic>=2.0",         # Data models (BaseModel, not dataclasses)
    "pyyaml>=6.0",           # Config files
    "python-dotenv>=1.0",    # .env file loading for API keys
    "rapidfuzz>=3.0",        # Fuzzy dedup matching
    "rich>=13.0",            # CLI output (tables, colors)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seeker_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
