[project]
name = "seeker-os"
version = "0.1.0"
description = "Structured, dashboard-driven job search pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",           # HTTP client (async-capable, but sync for Phase 1)
    "pydantic>=2.0",         # Data models (BaseModel, not dataclasses)
    "pyyaml>=6.0",           # Config files
    "python-dotenv>=1.0",    # .env file loading for API keys
    "rapidfuzz>=3.0",        # Fuzzy dedup matching
    "rich>=13.0",            # CLI output (tables, colors)
    "fastapi>=0.110",        # API backend (Phase 2)
    "python-multipart>=0.0.6",  # File uploads (master resume)
    "uvicorn[standard]>=0.29",  # ASGI server
    "anthropic>=0.40",       # Anthropic native API (Phase 3)
    "openai>=1.50",          # OpenAI-compatible API client (Phase 3)
    "weasyprint>=60",        # PDF export (markdown → HTML → PDF)
    "markdown>=3.7",         # Markdown → HTML conversion (for PDF export)
    "python-docx>=1.1",      # DOCX export
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",           # for TestClient
]
browser = [
    "playwright>=1.40",      # Headless browser fallback for Vercel JS challenges
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["seeker_os*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
